--- a/style.css
+++ b/style.css
@@ -112,3 +112,22 @@ body {
   letter-spacing: 0.001rem;
   line-height: 3.7rem;
 }
+#page3 {
+  min-height: 100vh;
+  width: 100%;
+}
+#hamburger {
+  /* min-height: 100vh; */
+  width: 100vw;
+  /* background-color: rgba(114, 114, 114, 0.322); */
+  position: fixed;
+  top: -100%;
+  z-index: 10;
+  transition: all ease 0.5s;
+}
+#hamburger-main {
+  height: 70vh;
+  width: 100vw;
+  background-color: #ff5f38;
+  color: black;
+}
